--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"><span class="navbar-text">
+                    5
+                </span>
+                <img src="assets/img/pT7rkrGpc-cat_print-removebg-preview.png" alt="" width="30" height="24"
+                    class="d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,6 +36,10 @@
             </div>
         </div>
     </nav>
+
+    <img src="https://cdn.hovia.com/app/uploads/dark-green-and-pink-floral-plain-820x532.jpg" alt="" />
+    <img src="https://i.etsystatic.com/12312441/r/il/cdfb76/1114647078/il_570xN.1114647078_ivti.jpg" />
+    <img src="https://i.pinimg.com/736x/d4/af/92/d4af9274c0d1b269112db3a860c8b4df.jpg" />S
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
