Line-up logo text & image and line-up to the left of navbar

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><span class="navbar-text">
-                    5
-                </span>
-                <img src="assets/img/pT7rkrGpc-cat_print-removebg-preview.png" alt="" width="30" height="24"
+            <a class="navbar-brand icon" href="#"><span class="navbar-text">5</span>
+                <img src="assets/img/pT7rkrGpc-cat_print-removebg-preview.png" alt="Logo" width="25%" height="25%"
                     class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
